
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]

name = "regawa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "gnn-policy",
  "gymnasium>=1.1.1",
  "psutil>=7.0.0",
  "tqdm>=4.67.1",
]


[project.optional-dependencies]
cpu = ["torch==2.5.0", "torch_scatter==2.1.2+pt25cpu"]
cu124 = ["torch==2.5.0", "torch_scatter==2.1.2+pt25cu124", "pynvml"]
jax_cpu = ["jax", "optax", "flax"]
jax_gpu = ["jax[cuda12]", "optax", "flax"]
rl = ["mlflow>=2.21.0", "tyro>=0.9.17", "wandb>=0.19.8"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
regawa = { workspace = true }
gnn-policy = { git = "git+ssh://git@gitr.sys.kth.se/jaknyb/gnn_policy" }

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "regawa",
  "matplotlib>=3.10.1",
  "graphviz>=0.20.3",
  "torchviz>=0.0.3",
]


[tool.uv]
find-links = [
  "https://data.pyg.org/whl/torch-2.5.0+cu124.html",
  "https://data.pyg.org/whl/torch-2.5.0+cpu.html",
]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]
